[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchian>=0.2.5",
    "notebook>=7.5.5",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
]
